--- a/src/App.css
+++ b/src/App.css
@@ -5,37 +5,89 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+label {
+  position: relative;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  
 }
 
-.card {
-  padding: 2em;
+label > span {
+  color: rgb(255, 49, 245);
+  display: inline-block;
+  width: 100%;
+  
+
+  transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg);
 }
 
-.read-the-docs {
-  color: #888;
+input {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border-style: hidden;
+  
+  /* border: 1px solid rgb(255, 49, 245);; */
+  /* box-shadow: 0px 0px 80px 1px rgb(255, 49, 245); */
+}
+
+
+input::placeholder {
+  color: rgb(82, 82, 82);
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 600;
+  text-transform: capitalize;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+input:active,
+input:focus {
+  border-style: none !important;
+  outline: none !important;
+  box-shadow: 0px 0px 80px 1px rgb(255, 49, 245);
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+
+
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  
+}
+button:hover {
+  background:  linear-gradient(#1a1a1a, #1a1a1a) padding-box,
+   linear-gradient(121deg, rgba(255,49,245,1) 0%, rgba(115,23,204,1) 51%, rgba(66,9,121,1) 94%) border-box;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
