--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,9 @@
 
 label {
   position: relative;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
   width: 100%;
+
   
 }
 
@@ -43,6 +44,8 @@ input {
   padding: 0.5rem;
   border-radius: 0.5rem;
   border-style: hidden;
+  width: 15vh;
+  height: 3vh;
   
   /* border: 1px solid rgb(255, 49, 245);; */
   /* box-shadow: 0px 0px 80px 1px rgb(255, 49, 245); */
@@ -80,9 +83,11 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s; 
   
 }
+
+
 button:hover {
   background:  linear-gradient(#1a1a1a, #1a1a1a) padding-box,
    linear-gradient(121deg, rgba(255,49,245,1) 0%, rgba(115,23,204,1) 51%, rgba(66,9,121,1) 94%) border-box;
