--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@ label > span {
   -webkit-transform: rotate(-10deg);
 }
 
+
+
 input {
   margin: 0.5rem;
   padding: 0.5rem;
@@ -46,7 +48,7 @@ input {
   border-style: hidden;
   width: 15vh;
   height: 3vh;
-  
+  font-weight: 800;
   /* border: 1px solid rgb(255, 49, 245);; */
   /* box-shadow: 0px 0px 80px 1px rgb(255, 49, 245); */
 }
@@ -95,4 +97,30 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+ul {
+
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: smaller;
+  font-weight: 200;
+}
+
+ul > li {
+  text-transform: capitalize;
+}
+
+ul > li > p >  span {
+  color: rgb(90, 90, 90);
+  font-weight: 100;
+  font-size: 1.3rem;
+}
+
+ul > li:hover,
+ul > li > p:hover > span {
+  color: rgba(255,49,245,1);
+  font-weight: 600;
+  cursor: pointer;
 }
